--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Git Website</title>
 </head>
 <body>
-    
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere, doloribus.</p>
 </body>
 </html>
